[gd_scene load_steps=6 format=3 uid="uid://ctkbps8l4pw6u"]

[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_3owrk"]
[ext_resource type="Script" path="res://Scenes/Common/Buttons/Scripts/clickable_die.gd" id="1_3xkko"]
[ext_resource type="Texture2D" uid="uid://o1xm76qu6h8h" path="res://DicePNGs/white/unknown-die.png" id="2_3b5f2"]
[ext_resource type="PackedScene" uid="uid://cvvyt7shl1nu3" path="res://Scenes/Common/Buttons/long_press_button.tscn" id="2_apn0u"]
[ext_resource type="PackedScene" uid="uid://2jcpfncolph" path="res://Scenes/Common/Labels/settings_managed_label.tscn" id="3_2t56e"]

[node name="ClickableDie" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 1
theme = ExtResource("1_3owrk")
script = ExtResource("1_3xkko")

[node name="LongPressButton" parent="." instance=ExtResource("2_apn0u")]
layout_mode = 1
flat = true

[node name="VerticalContainer" type="VBoxContainer" parent="LongPressButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -6.28319
theme = ExtResource("1_3owrk")
alignment = 1

[node name="Control" type="Control" parent="LongPressButton/VerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="DieImage" type="TextureRect" parent="LongPressButton/VerticalContainer/Control"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_3owrk")
texture = ExtResource("2_3b5f2")
expand_mode = 1
stretch_mode = 5

[node name="DieName" parent="LongPressButton/VerticalContainer" instance=ExtResource("3_2t56e")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 1

[connection signal="long_pressed" from="LongPressButton" to="." method="_on_long_press_button_long_pressed"]
[connection signal="short_pressed" from="LongPressButton" to="." method="_on_long_press_button_short_pressed"]
